<resources>
    <string name="app_name">MMC</string>
    <string name="nome">Nome:</string>
    <string name="idade">Idade:</string>
    <string name="peso">Peso (kg):</string>
    <string name="altura">Altura (m):</string>
    <string name="relatorio">Relatório Nutricional</string>
    <string name="novoCalc">Realizar novo Cálculo</string>
    <string name="IMC">IMC:</string>
    <string name="class_str">Classificação:</string>
</resources>