<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nome"
        android:layout_marginTop="25dp"
        android:layout_marginStart="20dp"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <EditText
        android:id="@+id/edit_name"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/name"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        />

    <LinearLayout
        android:id="@+id/first_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/edit_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="80dp"
        >
        <TextView
            android:id="@+id/idade"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/idade"
            android:textSize="25sp"
            />
        <Space
            android:layout_width="20dp"
            android:layout_height="20dp"/>
        <TextView
            android:id="@+id/peso"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/peso"
            android:textSize="25sp"
            />
        <Space
            android:layout_width="20dp"
            android:layout_height="20dp"/>
        <TextView
            android:id="@+id/altura"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/altura"
            android:textSize="25sp"
            />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/second_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/first_layout"
        app:layout_constraintStart_toStartOf="@id/first_layout"

        >
        <EditText
            android:id="@+id/idade_edit"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            />
        <Space
            android:layout_width="20dp"
            android:layout_height="20dp"/>
        <EditText
            android:id="@+id/peso_edit"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            />
        <Space
            android:layout_width="20dp"
            android:layout_height="20dp"/>
        <EditText
            android:id="@+id/altura_edit"
            android:layout_width="118dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            />
    </LinearLayout>

    <Button
        android:id="@+id/relatorio_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/relatorio"
        android:background="@drawable/button_drawable"
        android:layout_marginTop="150dp"
        android:onClick="createRelatorio"
        app:layout_constraintTop_toBottomOf="@id/second_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />


</androidx.constraintlayout.widget.ConstraintLayout>